crates/query-engine/translation/tests/snapshots/tests__mutations__experimental_insert.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
BEGIN
ISOLATION LEVEL READ COMMITTED READ WRITE;

WITH "%0_generated_mutation" AS (
  INSERT INTO
    "public"."Artist"("ArtistId", "Name")
  VALUES
    (276, cast($1 as "pg_catalog"."varchar")),
    (DEFAULT, cast($2 as "pg_catalog"."varchar")) RETURNING *,
    false AS "%check__constraint"
)
SELECT
  (
    WITH "%2_Artist" AS (
      SELECT
        "%1_experimental_insert_Artist".*
      FROM
        "%0_generated_mutation" AS "%1_experimental_insert_Artist"
    )
    SELECT
      json_build_object('result', row_to_json("%5_universe"), 'type', $3) AS "universe"
    FROM
      (
        SELECT
          *
        FROM
          (
            SELECT
              coalesce(json_agg(row_to_json("%6_returning")), '[]') AS "returning"
            FROM
              (
                SELECT
                  "%3_Artist"."ArtistId" AS "artist_id",
                  "%3_Artist"."Name" AS "name"
                FROM
                  "%2_Artist" AS "%3_Artist"
              ) AS "%6_returning"
          ) AS "%6_returning"
          CROSS JOIN (
            SELECT
              COUNT(*) AS "affected_rows"
            FROM
              "%2_Artist" AS "%4_Artist"
          ) AS "%7_aggregates"
      ) AS "%5_universe"
  ) AS "%results",
  (
    SELECT
      coalesce(
        bool_and(
          "%8_experimental_insert_Artist"."%check__constraint"
        ),
        true
      ) AS "%check__constraint"
    FROM
      "%0_generated_mutation" AS "%8_experimental_insert_Artist"
  ) AS "%check__constraint";

COMMIT;

[[(1, String("Olympians")), (2, String("The Other Band")), (3, String("procedure"))]]
