crates/query-engine/translation/tests/snapshots/tests__mutations__experimental_insert_empty_objects.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
BEGIN
ISOLATION LEVEL READ COMMITTED READ WRITE;

WITH "%0_generated_mutation" AS (
  INSERT INTO
    "public"."Dog"
  SELECT
  FROM
    generate_series(1, 4) RETURNING *,
    true AS "%check__constraint"
)
SELECT
  (
    WITH "%2_Dog" AS (
      SELECT
        "%1_experimental_insert_Dog".*
      FROM
        "%0_generated_mutation" AS "%1_experimental_insert_Dog"
    )
    SELECT
      json_build_object('result', row_to_json("%5_universe"), 'type', $1) AS "universe"
    FROM
      (
        SELECT
          *
        FROM
          (
            SELECT
              coalesce(json_agg(row_to_json("%6_returning")), '[]') AS "returning"
            FROM
              (
                SELECT
                  "%3_Dog"."id" AS "id",
                  "%3_Dog"."adopter_name" AS "adopter_name"
                FROM
                  "%2_Dog" AS "%3_Dog"
              ) AS "%6_returning"
          ) AS "%6_returning"
          CROSS JOIN (
            SELECT
              COUNT(*) AS "affected_rows"
            FROM
              "%2_Dog" AS "%4_Dog"
          ) AS "%7_aggregates"
      ) AS "%5_universe"
  ) AS "%results",
  (
    SELECT
      coalesce(
        bool_and(
          "%8_experimental_insert_Dog"."%check__constraint"
        ),
        true
      ) AS "%check__constraint"
    FROM
      "%0_generated_mutation" AS "%8_experimental_insert_Dog"
  ) AS "%check__constraint";

COMMIT;

[[(1, String("procedure"))]]
