crates/query-engine/translation/tests/snapshots/tests__mutations__insert_empty_objects.snap
---
source: crates/query-engine/translation/tests/tests.rs
assertion_line: 423
expression: result
---
BEGIN
ISOLATION LEVEL READ COMMITTED READ WRITE;

WITH "%0_generated_mutation" AS (
  INSERT INTO
    "public"."Dog"
  SELECT
  FROM
    generate_series(1, 4) RETURNING *,
    true AS "%check__constraint"
)
SELECT
  (
    SELECT
      json_build_object('result', row_to_json("%4_universe"), 'type', $1) AS "universe"
    FROM
      (
        SELECT
          *
        FROM
          (
            SELECT
              coalesce(json_agg(row_to_json("%5_returning")), '[]') AS "returning"
            FROM
              (
                SELECT
                  "%1_Dog"."id" AS "id",
                  "%1_Dog"."adopter_name" AS "adopter_name"
                FROM
                  "%0_generated_mutation" AS "%1_Dog"
              ) AS "%5_returning"
          ) AS "%5_returning"
          CROSS JOIN (
            SELECT
              COUNT(*) AS "affected_rows"
            FROM
              (
                SELECT
                  "%2_Dog".*
                FROM
                  "%0_generated_mutation" AS "%2_Dog"
              ) AS "%3_Dog"
          ) AS "%6_aggregates"
      ) AS "%4_universe"
  ) AS "%results",
  (
    SELECT
      coalesce(
        bool_and("%7_insert_Dog"."%check__constraint"),
        true
      ) AS "%check__constraint"
    FROM
      "%0_generated_mutation" AS "%7_insert_Dog"
  ) AS "%check__constraint";

COMMIT;

[[(1, String("procedure"))]]
