crates/query-engine/translation/tests/snapshots/tests__mutations__v2_update_by_id.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
BEGIN
ISOLATION LEVEL READ COMMITTED READ WRITE;

WITH "%0_generated_mutation" AS (
  UPDATE
    "public"."Dog"
  SET
    "height_cm" = 100,
    "height_in" = cast(null as "pg_catalog"."numeric")
  WHERE
    ("public"."Dog"."id" = 10) RETURNING *,
    true AS "%check__constraint"
)
SELECT
  (
    SELECT
      json_build_object('result', row_to_json("%4_universe"), 'type', $1) AS "universe"
    FROM
      (
        SELECT
          *
        FROM
          (
            SELECT
              coalesce(json_agg(row_to_json("%5_returning")), '[]') AS "returning"
            FROM
              (
                SELECT
                  "%1_Dog"."id" AS "id",
                  "%1_Dog"."adopter_name" AS "adopter_name"
                FROM
                  "%0_generated_mutation" AS "%1_Dog"
              ) AS "%5_returning"
          ) AS "%5_returning"
          CROSS JOIN (
            SELECT
              COUNT(*) AS "affected_rows"
            FROM
              (
                SELECT
                  "%2_Dog".*
                FROM
                  "%0_generated_mutation" AS "%2_Dog"
              ) AS "%3_Dog"
          ) AS "%6_aggregates"
      ) AS "%4_universe"
  ) AS "%results",
  (
    SELECT
      coalesce(
        bool_and("%7_v2_update_Dog_by_id"."%check__constraint"),
        true
      ) AS "%check__constraint"
    FROM
      "%0_generated_mutation" AS "%7_v2_update_Dog_by_id"
  ) AS "%check__constraint";

COMMIT;

[[(1, String("procedure"))]]
